Linear gradient added over the header image and centered the hero text

--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -18,7 +18,7 @@ html{
 }
 
 header{
-    background-image: url(img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url(img/hero.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
