--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -22,6 +22,7 @@ header{
     height: 100vh;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 .hero-text-box{
