--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -35,4 +35,41 @@ header{
 
 h1{
     margin: 0;
+    color: #fff;
+    font-size: 200%;
+    font-weight: 300;
+    letter-spacing: 1px;
+    word-spacing: 4px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.btn:link,
+.btn:visited{
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid #e67e22;
+    border-radius: 200px;
+    padding: 10px 30px;
+    transition: background-color 0.3s, border 0.3s, color 0.3s;
+}
+
+.btn-full{
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.btn-ghost{
+    color: #e67e22;
+}
+.btn-full:hover,
+.btn-full:active{
+    background-color: #cf6d17;
+    border-color: #cf6d17;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active{
+    background-color: #e67e22;
+    color: #fff;
 }
