--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -1,3 +1,6 @@
+/*------------------------------------*/
+/* BASIC SETUP */
+/*------------------------------------*/
 *{
     margin: 0;
     padding: 0;
@@ -12,27 +15,15 @@ html{
     font-size: 25px;
 }
 
+/*------------------------------------*/
+/* REUSABLE */
+/*------------------------------------*/
 .row{
     max-width: 1140px;
     margin: 0 auto;
 }
 
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url(img/hero.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-}
-
-.hero-text-box{
-    position: absolute;
-    width: 1140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    
-}
-
+/*-------HEADING-------*/
 h1{
     margin: 0;
     color: #fff;
@@ -44,6 +35,7 @@ h1{
     margin-bottom: 20px;
 }
 
+/*-------BUTTONS-------*/
 .btn:link,
 .btn:visited{
     display: inline-block;
@@ -72,4 +64,22 @@ h1{
 .btn-ghost:active{
     background-color: #e67e22;
     color: #fff;
+}
+
+/*------------------------------------*/
+/* HEADER */
+/*------------------------------------*/
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url(img/hero.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.hero-text-box{
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);   
 }
