--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -1,3 +1,7 @@
+/*
+Orange  #e67e22
+*/
+
 /*------------------------------------*/
 /* BASIC SETUP */
 /*------------------------------------*/
@@ -83,3 +87,49 @@ header{
     left: 50%;
     transform: translate(-50%,-50%);   
 }
+
+.logo{
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+.main-nav ul{
+    float: right;
+    list-style: none;
+    margin-top: 50px;
+}
+
+.main-nav ul li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.main-nav ul li a:link,
+.main-nav ul li a:visited{
+    color: #fff;
+    font-size: 90%;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 7px 0;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s; 
+}
+
+.main-nav ul li a:hover,
+.main-nav ul li a:active{
+    border-bottom: 2px solid #e67e22;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
