--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -157,6 +157,11 @@ header{
 /*------------------------------------*/
 /* SECTION FEATURE */
 /*------------------------------------*/
+
+.section-features .long-copy{
+    margin-bottom: 30px;
+}
+
 .long-copy{
     width: 70%;
     line-height: 145%;
@@ -178,6 +183,60 @@ header{
     line-height: 145%;
     font-size: 90%;
 }
+
+/*------------------------------------*/
+/* SECTION MEALS */
+/*------------------------------------*/
+
+.section-meals{
+    padding: 0;
+}
+.meals-showcase{
+    list-style: none;
+    width: 100%;
+}
+
+.meals-showcase li{
+    display: block;
+    float: left;
+    width: 25%;
+}
+.meals-photo{
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: black;
+}
+.meals-photo img{
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    opacity: 0.7;
+    transition: transform 0.5s, opacity 0.5s;
+}
+.meals-photo img:hover{
+    transform: scale(1.03);
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
