--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -287,7 +287,31 @@ header{
     margin-right: 30px;
 }
 
+/*------------------------------------*/
+/* SECTION CITIES */
+/*------------------------------------*/
 
+.box img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+.city-feature{
+    margin-bottom: 6px;
+}
+
+.city-feature a{
+    text-decoration: none;
+    color: #e67e22;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 2px;
+    transition: border-bottom 0.5s, color 0.5s;
+}
+.city-feature a:hover,
+.city-feature a:active{
+    color: #555;
+    border-bottom: 2px solid transparent;
+}
 
 
 
